syntax = "proto3";
package sliceorchestrator.slice.v1;

message SliceSpec { string id = 1; uint32 latency_sla_ms = 2; uint32 bandwidth_mbps = 3; bool isolation = 4; }
message SliceStatus { string id = 1; bool allocated = 2; uint32 current_bandwidth_mbps = 3; }

service SliceService {
  rpc CreateSlice (SliceSpec) returns (SliceStatus);
  rpc GetSlice (SliceSpec) returns (SliceStatus);
}

